# InstaT

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
InstaT/: MANIFEST.in  __init__.py  async_extractor.py  checkpoint.py  constants.py  exceptions.py  exporters.py  extractor.py  extractor.py.bak  login.py  parallel.py  pyproject.toml.bak  session_cache.py  utils.py  utils.py.bak
InstaT/InstaT.egg-info/: PKG-INFO
InstaT/config/: __init__.py  selector_loader.py  selectors.json
InstaT/engines/: __init__.py  engine_manager.py  httpx_engine.py
InstaT/logs/artifacts/: meta_interstitial_20250909_204217.html  meta_interstitial_20250909_204724.html
_instat_rename_tmp/: __init__.py.bak  exceptions.py  extractor.py  proxy.py  session_cache.py  session_pool.py  utils.py
_instat_rename_tmp/InstaT.egg-info/: SOURCES.txt  requires.txt
_instat_rename_tmp/engines/: base.py  playwright_engine.py  selenium_engine.py
docs/: ARCHITECTURE.md  LARGE_SCALE_STRATEGIES.md  TROUBLESHOOTING.md  USAGE.md
examples/: example_usage.py.bak
instat/: MANIFEST.in  __init__.py  __main__.py  backoff.py  block_detector.py  block_predictor.py  challenge_resolvers.py  checkpoint.py  email_code.py  extractor.py  login.py  login_flow.py  modal_interaction.py  persistent_store.py  profile.py  session_cache.py
instat.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
instat/config/: __init__.py  selectors.json
instat/engines/: engine_manager.py  httpx_engine.py  selenium_engine.py
tests/: test_account_rotation.py  test_async_extractor.py  test_backoff.py  test_block_detector.py  test_block_predictor.py  test_cascade_cookie_handoff.py  test_challenge_resolvers.py  test_checkpoint.py  test_cli.py  test_completion_threshold_and_resume.py  test_constants.py  test_email_code.py  test_engine_manager.py  test_exporters.py  test_extractor.py  test_extractor_persistent.py  test_failure_scenarios.py  test_fallback_integration.py  test_get_both.py  test_httpx_engine.py  test_login.py  test_login_flow.py  test_modal_interaction.py  test_parallel.py  test_perf_02.py  test_perf_fixes.py  test_persistent_store.py  test_playwright_engine.py  test_profile.py  test_proxy.py  test_security_fixes.py  test_selector_loader.py  test_selenium_engine.py  test_session_cache.py  test_session_pool.py  test_skip_persistent_engine.py  test_warmup_stale_rounds.py  test_xhr_interception.py
tests/e2e/: conftest.py  fake_server.py  test_e2e_selenium.py
tests/e2e/templates/: login.html  modal.html  profile.html
