[build-system]
requires = ["setuptools>=61.0", "wheel", "build", "twine"]
build-backend = "setuptools.build_meta"

[project]
name = "instat"
version = "1.0.2"
description = "A robust Instagram data extractor using Selenium with automated login, scrolling, and profile capture."
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Tiago Pereira da Silva", email = "tiagosilv@gmail.com" }
]
license = { text = "MIT" }
keywords = ["instagram", "scraping", "automation", "selenium", "social network", "influencer marketing"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Framework :: Pytest",
    "Environment :: Console"
]
dependencies = [
    "selenium>=4.12.0",
    "loguru>=0.7.0",
    "webdriver-manager>=4.0.1"
]

[project.optional-dependencies]
playwright = [
    "playwright>=1.40",
    "playwright-stealth>=1.0"
]
httpx = [
    "httpx>=0.25"
]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "build>=1.0"
]

[project.scripts]
instat = "instat.__main__:main"

[project.urls]
Homepage = "https://www.linkedin.com/in/tiagopsilvatec/"
GitHub = "https://github.com/tiagopsilv/InstaT"
LinkedIn = "https://www.linkedin.com/in/tiagopsilvatec/"

[tool.setuptools]
packages = ["instat", "instat.config", "instat.engines"]
include-package-data = true
zip-safe = false

[tool.setuptools.package-data]
"instat.config" = ["selectors.json"]

[tool.twine]
username = "__token__"
password = ""  # defina via TWINE_PASSWORD

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = ["tests"]
markers = [
    "e2e: end-to-end tests requiring Firefox (deselect with -m 'not e2e')"
]

[tool.ruff]
target-version = "py39"
line-length = 120
exclude = [
    ".venv", "build", "dist", "*.egg-info",
    "instat/logs", ".instat_checkpoints", ".instat_sessions"
]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = [
    "E501",
    "E402"
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402", "F401", "I001"]

[tool.ruff.lint.isort]
known-first-party = ["instat"]

[tool.mypy]
python_version = "3.10"
files = ["instat"]
follow_imports = "silent"
namespace_packages = false
ignore_missing_imports = true
check_untyped_defs = false
warn_unused_ignores = false
warn_redundant_casts = true
no_implicit_optional = true
# Disable error codes that produce many false positives due to lazy-init pattern
# (self._client = None → later self._client = httpx.Client(...))
disable_error_code = ["attr-defined", "return-value", "assignment", "misc", "return", "type-var", "arg-type", "no-redef", "import-not-found"]
exclude = [
    "^build/",
    "^dist/",
    "^.venv/",
    "^instat\\.egg-info/",
    "^tests/",
    "site-packages",
    "_pytest"
]
